<resources>
    <string name="app_name">EventTracker</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="mobile2app">Mobile2App</string>
    <string name="mobile2app_logo">Mobile2App logo</string>
    <string name="search">Search</string>
    <string name="company_logo_that_navigates_to_home_page">company logo that navigates to home page</string>
    <string name="add_event_fab">add event floating action button</string>
    <string name="or">OR</string>
    <string name="sign_in_github">Sign in with GitHub</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="request_image">image pertaining to request</string>
    <string name="event">Event</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="event_name">Event Name</string>
    <string name="trash_icon">trash icon</string>
    <string name="enable_text_notifications">Enable Text Communication</string>
    <string name="enable_text_notifications_descriptions">Enable text communication so the app can send text messages. Communicate and collaborate with friends by quickly sending them text messages about events or to receive notifications.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="no_thanks">No Thanks</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">hello blank fragment</string>
    <string name="invalid_username_or_password">Invalid Username or Password</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="create_event">Create Event</string>
    <string name="event_title">Event Title</string>
    <string name="e_g_career_fair">e.g. Career Fair</string>
    <string name="event_date">Event Date</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="event_time">Event Time</string>
    <string name="e_g_02_00pm">e.g. 02:00PM</string>
    <string name="create">Create</string>
    <string name="price">Price</string>
    <string name="distance">Distance</string>
    <string name="filters">Filters</string>
    <string name="timeSpace">Time</string>
    <string name="client_id">548782967469-thkm8f1tvqmml0b6v71lomaiqv22i5nd.apps.googleusercontent.com</string>
    <string name="log_out">Log out</string>
</resources>