<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Account Settings">

        <EditTextPreference
            android:key="username"
            android:title="Username"
            android:summary="Enter your username"
            android:dialogTitle="Username" />

        <EditTextPreference
            android:key="password"
            android:title="Password"
            android:summary="Enter your password"
            android:inputType="textPassword"
            android:dialogTitle="Password" />

        <EditTextPreference
            android:key="phone_number"
            android:title="Phone Number"
            android:summary="Enter your phone number"
            android:inputType="phone"
            android:dialogTitle="Phone Number" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header">

        <CheckBoxPreference
            android:key="notifications"
            android:title="Enable notifications"
            android:defaultValue="true" />

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>