<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/event_create_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/light_blue"
    >
    <ImageView
        android:id="@+id/menu_icon"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:background="@color/light_blue"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_menu"
        android:contentDescription="@string/company_logo_that_navigates_to_home_page" />

    <TextView
        android:id="@+id/companyLogoText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/frame_gradient_border"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/mobile2app"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignBottom="@id/menu_icon"
        />
    <FrameLayout
        android:id="@+id/event_add_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="35dp"
        android:background="@color/white"
        android:layout_below="@id/companyLogoText1"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp"
            >


            <TextView
                android:id="@+id/create_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_event"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_title"
                android:textSize="22sp"
                android:layout_marginTop="35dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_title" />

            <EditText
                android:id="@+id/event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_g_career_fair"
                android:inputType="text"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:padding="8dp"
                android:background="@drawable/frame_rounded_corner"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/title_text"
                android:autofillHints="" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_date"
                android:textSize="22sp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_title" />

            <TextView
                android:id="@+id/event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dd_mm_yyyy"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:padding="8dp"
                android:background="@drawable/frame_rounded_corner"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/date_text"/>

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_time"
                android:textSize="22sp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_date" />

            <TextView
                android:id="@+id/event_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_g_02_00pm"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:padding="8dp"
                android:background="@drawable/frame_rounded_corner"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/time_text"/>

            <Button
                android:id="@+id/create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                app:layout_constraintEnd_toEndOf="@id/event_time"
                app:layout_constraintTop_toBottomOf="@id/event_time"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</RelativeLayout>