<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/black_transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:padding="16dp"
            android:gravity="center">

        <ImageView
                android:id="@+id/permissionImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/request_image"
                android:src="@drawable/pic_notifications_active"/>

            <TextView
                android:id="@+id/permissionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/enable_text_notifications"
                android:shadowColor="@color/black"
                android:gravity="center"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"/>

            <TextView
                android:id="@+id/permissionDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="14sp"
                android:gravity="center"
                android:text="@string/enable_text_notifications_descriptions"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"/>

            <Button
                android:id="@+id/grantPermissionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:text="@string/grant_permission" />

            <TextView
                android:id="@+id/denyPermissionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:text="@string/no_thanks" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>