<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_screen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_fireworks">
    <!-- Credit to Maximalfocus, https://unsplash.com/photos/fireworks-on-bridge-during-night-time-WkB25gfCg8E -->


    <ImageView
        android:id="@+id/companyImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pic_logo_company"
        android:contentDescription="@string/mobile2app_logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        />

    <TextView
        android:id="@+id/companyLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/companyImage"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/mobile2app"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="35sp"
        android:background="@drawable/frame_gradient_border" />

    <FrameLayout
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/frame_login"
        android:layout_below="@id/companyImage"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="30dp"
                android:autofillHints=""
                android:background="@drawable/frame_rounded_corner"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:autofillHints=""
                android:background="@drawable/frame_rounded_corner"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/username" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="@id/password"
                app:layout_constraintRight_toLeftOf="@id/buttonSignUp"
                app:layout_constraintTop_toBottomOf="@id/password" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintLeft_toRightOf="@id/buttonLogin"
                app:layout_constraintRight_toRightOf="@id/password"
                app:layout_constraintTop_toBottomOf="@id/password" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/frame_gradient_border"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/buttonSignUp"
                app:layout_constraintTop_toBottomOf="@id/buttonSignUp" />

            <View
                android:id="@+id/left_divider"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@color/white"
                app:layout_constraintLeft_toLeftOf="@id/buttonLogin"
                app:layout_constraintRight_toRightOf="@id/buttonLogin"
                app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

            <TextView
                android:id="@+id/text_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@id/left_divider"
                app:layout_constraintLeft_toRightOf="@id/left_divider"
                app:layout_constraintRight_toLeftOf="@id/right_divider"
                app:layout_constraintTop_toTopOf="@id/left_divider" />

            <View
                android:id="@+id/right_divider"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                app:layout_constraintLeft_toLeftOf="@id/buttonSignUp"
                app:layout_constraintRight_toRightOf="@id/buttonSignUp"
                app:layout_constraintTop_toBottomOf="@id/buttonSignUp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/buttonGoogleLogin"
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="buttonGoogleSignIn"
                android:layout_marginTop="20sp"
                app:layout_constraintStart_toStartOf="@id/left_divider"
                app:layout_constraintEnd_toEndOf="@id/right_divider"
                app:layout_constraintTop_toBottomOf="@id/text_or" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</RelativeLayout>

